--- a/style.css
+++ b/style.css
@@ -20,8 +20,8 @@ body
 {
     width:50px;
     height:50px;
-    /* border: 2px solid brown; */
-    background-color: brown;
+    border: 2px solid #000;
+    background-color: #CEA28A;
 }
 
 .box-neck
