--- a/style.css
+++ b/style.css
@@ -45,12 +45,16 @@ body
     background-color: lightblue;
 }
 
-.handL
+.handL, .handR
 {
-    border: 2px solid #000;
+    border: 3px solid #000;
     width: 80px;
     height: 35px;
     margin: 55px;
+}
+
+.handL
+{
     margin-left: -50px;
 }
 
@@ -74,10 +78,6 @@ body
 
 .handR
 {
-    border: 2px solid #000;
-    width: 80px;
-    height: 35px;
-    margin: 55px;
     margin-right: -50px;
 }
 
@@ -138,8 +138,33 @@ body
 
 .leg
 {
-    border: 2px solid;
+    border: 3px solid;
     width: 50px;
     height: 60px;
     margin-bottom: 5px;
+}
+
+.feet
+{
+    display: flex;
+    justify-content: center;
+}
+
+.footL, .footR
+{
+    border: 3px solid;
+    width: 60px;
+    height: 30px;
+    background-color: #B5E61D;
+
+}
+
+.footL
+{
+    margin-right: 65px;
+}
+
+.footR
+{
+    margin-left: 65px;
 }
