--- a/style.css
+++ b/style.css
@@ -1,8 +1,15 @@
+* 
+    {
+    box-sizing: border-box;
+    }
+
 body
 {
     /* background-color: lightblue; */
     padding: 0;
     margin:0;
+    background-color: #fff;
+    font-family: 'Lato', sans-serif;
 }
 
 .row1
@@ -168,3 +175,171 @@ body
 {
     margin-left: 65px;
 }
+
+
+.v-center {
+    /*   display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex; */
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+    /*   float: left: */
+              justify-content: center;
+      height: 100%;
+    }
+    
+    article {
+      width: 100px;
+      height: 150px;
+      max-height: 400px;
+      color: white;
+      -webkit-perspective: 1000px;
+              perspective: 1000px;
+      position: relative;
+      text-align: center;
+    }
+    /* .art1, .art2,  .art3,  .art4 */
+    {
+      float: left;
+    }
+    
+    article .front,
+    article .back {
+      clear: both;
+      -webkit-transition: -webkit-transform 0.7s cubic-bezier(0.4, 0.2, 0.2, 1);
+      transition: -webkit-transform 0.7s cubic-bezier(0.4, 0.2, 0.2, 1);
+      transition: transform 0.7s cubic-bezier(0.4, 0.2, 0.2, 1);
+      transition: transform 0.7s cubic-bezier(0.4, 0.2, 0.2, 1), -webkit-transform 0.7s cubic-bezier(0.4, 0.2, 0.2, 1);
+      -webkit-backface-visibility: hidden;
+              backface-visibility: hidden;
+      overflow: hidden;
+      position: relative;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      min-height: 100%;
+      height: 400px;
+    }
+    article .front {
+      position: absolute;
+      z-index: 2;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      -webkit-transform: rotateY(0deg);
+              transform: rotateY(0deg);
+      background-size: cover;
+      background-position: center;
+      background-color: #222;
+      background-blend-mode: overlay;
+    }
+    article .front .text {
+      -webkit-transform: translate3d(0, 0, 0);
+              transform: translate3d(0, 0, 0);
+      opacity: 1;
+    }
+    article .back {
+      -webkit-transform: rotateY(180deg);
+              transform: rotateY(180deg);
+      background: darkorange;
+      position: relative;
+      z-index: 1;
+    }
+    article .back .text {
+      padding: 0 1.7em;
+      -webkit-transform: translate3d(100%, 0, 0);
+              transform: translate3d(100%, 0, 0); /*odpowiedzialne za animacje tekstu na rewersie karty*/
+    }
+    article .text {
+      -webkit-transition: opacity 0.4s linear, -webkit-transform 0.7s cubic-bezier(0.4, 0.2, 0.2, 1);
+      transition: opacity 0.4s linear, -webkit-transform 0.7s cubic-bezier(0.4, 0.2, 0.2, 1);
+      transition: transform 0.7s cubic-bezier(0.4, 0.2, 0.2, 1), opacity 0.4s linear;
+      transition: transform 0.7s cubic-bezier(0.4, 0.2, 0.2, 1), opacity 0.4s linear, -webkit-transform 0.7s cubic-bezier(0.4, 0.2, 0.2, 1);
+      opacity: 0;
+    }
+    article:hover .front {
+      -webkit-transform: rotateY(-180deg);
+              transform: rotateY(-180deg);
+    }
+    article:hover .front .text {
+      -webkit-transform: translate3d(-200%, 0, 0);
+              transform: translate3d(-200%, 0, 0);
+      opacity: 0;
+    }
+    article:hover .back {
+      -webkit-transform: rotateY(0deg);
+              transform: rotateY(0deg);
+    }
+    article:hover .back .text {
+      -webkit-transform: translate3d(0, 0, 0);
+              transform: translate3d(100, 0, 0);
+      opacity: 1;
+    }
+    
+    article:nth-child(1) .front {
+      background-image: url(https://cdn.pixabay.com/photo/2019/06/17/08/39/phone-4279429__340.jpg);
+    }
+    article:nth-child(1) .front h2:before {
+      background-image: url(img/chat.svg);
+    }
+    }
+    
+    /*SMARTFON PHABLET TABLET */
+    @media (min-width: 1px) and (max-width: 599px) (orientation: portrait){
+      
+      article {
+        clear: both;
+        float: none;
+      width: 100%;
+      height: 90%;
+        max-height: 400px;
+      margin: 2% 1em;
+      color: white;
+      -webkit-perspective: 1000px;
+              perspective: 1000px;
+      position: relative;
+      text-align: center;
+    }
+    
+    
+      .art1, .art2,  .art3,  .art4
+      {
+        float: none;
+        clear: both;
+      }
+    }
+    
+    /*TABLET */
+    @media (min-width: 680px) and (max-width: 820px) {
+      
+    .art1
+    {
+      float: left;
+    }
+    
+    .art2
+    {
+      /*float: right;*/
+    }
+    
+    .art3
+    {
+      float: left;
+    } 
+    
+    .art4 
+      {
+          /*float: le;*/
+      }
+      
+    }
