--- a/Moje-Cwiczenia/paulina/zadania/proste/style.css
+++ b/Moje-Cwiczenia/paulina/zadania/proste/style.css
@@ -25,7 +25,7 @@ body
 .menu
 {
     width: 40vw;
-    margin-top: 5%;
+    margin: 3vw 1vw;
     display: flex;
     justify-content: space-evenly;
 }
