--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body
     justify-content: space-evenly;
 }
 
-li, a
+li > a
 {
     text-decoration: none;
     list-style: none;
@@ -99,6 +99,7 @@ p
     width: 100px;
     height: 50px;
     background-color: lightblue;
+    text-align: center;
 }
 
 .handL, .handR
@@ -130,6 +131,7 @@ p
     width: 100px;
     height: 50px;
     background-color: lightblue;
+    text-align: center;
 }
 
 .handR
@@ -156,6 +158,13 @@ p
     border: 3px solid;
     margin-bottom: 5px;
     background-color: lightblue;
+    text-align: center;
+}
+
+.thighL1 > a, .thighR1 > a
+{
+  text-decoration: none;
+  
 }
 
 .thighR
