--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body
     /* background-color: lightblue; */
     padding: 0;
     margin:0;
-    background: url("23-2148273840.jpg") no-repeat;
+    background: url("549234-space-galaxy.jpg") no-repeat;
     background-size: cover;
     font-family: 'Lato', sans-serif;
 }
