--- a/style.css
+++ b/style.css
@@ -23,9 +23,6 @@ body
     height: 100vh;
     padding: 15vh 0;
     margin: 0;
-    background: url("549234-space-galaxy.jpg") no-repeat;
-    background-size: cover;
-
 }
 
 .header
@@ -36,7 +33,7 @@ body
     position: fixed;
     top: 0;
     width: 100%;
-    height: 15vh;
+    height: 10vh;
     align-items: center;
     background-color: #000;
     z-index: 3;
@@ -63,6 +60,12 @@ p
 {
     margin: 5vw;
     text-align: center;
+}
+
+.box-model
+{
+  background: url("549234-space-galaxy.jpg") no-repeat;
+  background-size: cover;
 }
 /* ------------------------------>>> ROBOCIK  <<< ------------------------------ */
 
