--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ p
 {
   background: url("549234-space-galaxy.jpg") no-repeat;
   background-size: cover;
+  padding: 5%;
 }
 /* ------------------------------>>> ROBOCIK  <<< ------------------------------ */
 
