poprawka og:image

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body
 .container
 {
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
     padding: 10vh 0;
     margin: 0;
 }
@@ -349,7 +349,8 @@ p
     /* ------------------------------>>> KONIEC FLIP Cart  <<< ------------------------------ */
 
     .sections {
-      padding: 50px 0;
+      padding: 11vh 0;
+      
       text-align: justify;
     }
     
