--- a/egzamin/fontello.css
+++ b/egzamin/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?49176216');
-  src: url('../font/fontello.eot?49176216#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?49176216') format('woff2'),
-       url('../font/fontello.woff?49176216') format('woff'),
-       url('../font/fontello.ttf?49176216') format('truetype'),
-       url('../font/fontello.svg?49176216#fontello') format('svg');
+  src: url('./font/fontello.eot?49176216');
+  src: url('./font/fontello.eot?49176216#iefix') format('embedded-opentype'),
+       url('./font/fontello.woff2?49176216') format('woff2'),
+       url('./font/fontello.woff?49176216') format('woff'),
+       url('./font/fontello.ttf?49176216') format('truetype'),
+       url('./font/fontello.svg?49176216#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
