--- a/projekty/2021/rozbiorki/style.css
+++ b/projekty/2021/rozbiorki/style.css
@@ -14,9 +14,7 @@ html {
 }
 
 body,
-html {
-  height: 100%;
-}
+html {height: 100%;}
 
 body
 {
@@ -55,13 +53,9 @@ header
     margin: 0.75% 0 0 3%;
 }
 
-[type="checkbox"] {
-  display: none;
-}
+[type="checkbox"] {display: none;}
 
-[for="button"] {
-  display: none; 
-}
+[for="button"] {display: none;}
 
 nav {
    float: left;
@@ -69,7 +63,8 @@ nav {
    overflow: hidden;
    position: absolute;
    top: 35%;
-}
+    }
+
 nav ul {
    clear: both;
    float: left;
@@ -99,7 +94,6 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-
 border-bottom: 2px solid #fff;
 padding-bottom: 5%;
 }
@@ -119,9 +113,7 @@ nav ul li a.zaznaczony, #nav ul li a.zaznaczony:hover {
   font: 14px sans-serif;
 }
 
-[for="button"] {
-  display: block;
-}
+[for="button"] {display: block;}
 
 label {
   font-weight: bold;
@@ -137,10 +129,7 @@ label, a
   color: #ffb505;
 }
 
-li
-{
-	list-style: none;
-}
+li {list-style: none;}
 
 nav {
   max-height: 0;
@@ -222,10 +211,7 @@ nav ul li a
     font-size: 7vw;
 }
 
-.cta
-{
-  display: none;
-}
+.cta {display: none;}
 
 /* ------------------------------>>> KONIEC TŁO Deklaracja zagnieżdzona  <<< ------------------------------ */
 .section {
@@ -249,10 +235,7 @@ nav ul li a
   padding-right: 15px;
 }
 
-h2
-{
-  margin-top: 50px;
-}
+h2 {margin-top: 50px;}
 
 #start
 {
@@ -362,7 +345,7 @@ h2
         cursor: pointer;
         border-style: solid;
         border-width: 5px 0px 5px 7px;
-      position:absolute;
+        position:absolute;
 }
 
 /* ------------------------ KONIEC strzałki ------------------------*/
@@ -450,10 +433,7 @@ label, a {
 }
 /* ------------------------ KONIEC Koła ------------------------*/
 /* ------------------------ Strzałka ------------------------*/
-.arrow {
-  margin-top: 10%;
-        
-    }
+.arrow {margin-top: 10%;}
 /* ------------------------ KONIEC strzałki ------------------------*/    
 /* ------------------------ Napis: Do góry ------------------------*/
 a .dogory 
@@ -473,7 +453,7 @@ a.cta
     top: 92%;
     width: 100%;
     height: 5%;
-        padding: 6% 0;
+    padding: 6% 0;
     border: 2px solid black;
     background: orange;
     z-index: 9;
@@ -505,10 +485,7 @@ footer
 /*SMARTFON iPhone X*/
 @media (max-width: 960px) and (orientation:landscape){
 
-header
-{
-    height: 20%;
-}
+header {height: 20%;}
 
 #logo
 {
@@ -556,10 +533,7 @@ nav ul li a {
   z-index: 6;
 }
 
-.arrow {
-  margin-top: 0%;
-        
-    }
+.arrow {margin-top: 0%;}
 
 a.cta
   {
@@ -570,20 +544,13 @@ a.cta
     padding: 2% 0;
   }
 
-  footer
-{
-  margin-top: -23.8%;
+  footer {margin-top: -23.8%;}
 }
-}
-
 
 /*SMARTFON*/
 @media (max-width: 360px) {
 
-#logo
-{
-    margin: 0.5% 0% 0.5% 6%;
-}
+#logo {margin: 0.5% 0% 0.5% 6%;}
 
 .divgotop2
 {
