--- a/Moje-Cwiczenia/figma/19.04.21/style.css
+++ b/Moje-Cwiczenia/figma/19.04.21/style.css
@@ -14,6 +14,15 @@ body{background-color: #354147}
 .container
 {
     width: 100%;
+    height: auto;
+}
+
+.header
+{
+    /* margin-top: -50px; */
+    width: 100%;
+    height: 240vh;
+    background: url("bgc.webp") no-repeat;
 }
 
 .header__nav
@@ -27,12 +36,6 @@ body{background-color: #354147}
     justify-content: space-between;
 }
 
-/* .nav-between:-moz-first-node */
-/* {
-    font-size: 1.5em;
-    font-weight: 800;
-} */
-
 .nav-evenly
 {
     display: flex;
@@ -40,19 +43,10 @@ body{background-color: #354147}
     margin-top: -15px;
 }
 
-li {margin-right: 10px
-}
+li {margin-right: 10px}
 
 .nav-between > li:-moz-first-node
 {
     font-size:1.5em;
     font-weight: 800;
-}
-
-.bgc
-{
-    margin-top: 50px;
-    width: 100%;
-    height: 100%;
-    background-image: url("bgc.webp");
 }
