--- a/Moje-Cwiczenia/figma/19.04.21/style.css
+++ b/Moje-Cwiczenia/figma/19.04.21/style.css
@@ -21,7 +21,7 @@ body{background-color: #354147}
 {
     /* margin-top: -50px; */
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background: url("bgc.webp") no-repeat;
 }
 
