--- a/Moje-Cwiczenia/figma/19.04.21/style.css
+++ b/Moje-Cwiczenia/figma/19.04.21/style.css
@@ -23,6 +23,8 @@ body{background-color: #354147}
     width: 100%;
     height: 100vh;
     background: url("bcg.webp") no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 .header__nav
