margin na ul L i R

--- a/Moje-Cwiczenia/figma/19.04.21/style.css
+++ b/Moje-Cwiczenia/figma/19.04.21/style.css
@@ -31,22 +31,24 @@ body{background-color: #354147}
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border: 2px solid blue;
 }
 
-.nav-left > li
+ul.nav-left
 {
-    margin-left: 50%;
+    margin-left: 4%;
 }
 
-.nav-right > li
+ul.nav-right
 {
-    margin-right: 50%;
+    margin-right: 4%;
 }
 
 .nav-3link
 {
     display: flex;
     justify-content: center;
+    font-size: 14px;
 }
 
 .nav-3link > li
