--- a/Moje-Cwiczenia/figma/19.04.21/style.css
+++ b/Moje-Cwiczenia/figma/19.04.21/style.css
@@ -86,6 +86,34 @@ ul.nav-right
     flex: 8;
 }
 
+.bgc__aside
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.bgc__aside--left
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.bgc__aside--left > p
+{
+    transform: rotateZ(90deg);
+    width: 100px;
+    height: 25px;
+}
+
+.bgc__aside--left img
+{
+    display: flex;
+    flex-direction: column;
+    margin-top: 45%;
+}
+
 .subtitle
 {
     display: flex;
@@ -93,7 +121,7 @@ ul.nav-right
 
 }
 
-.subtitle > span:first-child
+.subtitle > span
 {
     display: inline-block;
     height: 2px;
@@ -112,14 +140,53 @@ ul.nav-right
     color: #FBD784;
 }
 
+.subtitle > p
+{
+    color: #ee1111c0;
+    font-size: 44px;
+    /* NIE DZIALA P W .SUBTITLE */
+}
+
 .hero > h1
 {
     font-family: PT serif;
     font-weight: bold;
     font-size: 6em;
     line-height: 100px;
+    color: rgba(255, 255, 255, 0.678);
 }
 
 p > span {font-size: 1.5em}
 
+.bgc__aside--right
+{
+    margin: 11vh 7vh 0 0;
+    /* border: 2px solid red; */
+}
 
+.bgc__aside--right > p
+{
+    margin-bottom: 9vh;
+}
+
+.border
+{
+    display: inline-block;
+    height: 55vh;
+    font-size: 1em;
+    line-height: 2em;
+    margin: 5vh 12vh 0 0;
+    border: 1px solid rgba(255, 255, 255, 0.678);
+    z-index: 1;
+
+}
+
+.border > p
+{
+    display: inline-block;
+    height: 10vh;
+    font-size: 1em;
+    line-height: 2em;
+    border: 1px solid red;
+    z-index: 2;
+}
