--- a/Moje-Cwiczenia/figma/19.04.21/style.css
+++ b/Moje-Cwiczenia/figma/19.04.21/style.css
@@ -72,10 +72,10 @@ ul.nav-right
     margin-right: 20px;
 }
 
-.nav-left, .nav-3link, .nav-right
+/* .nav-left, .nav-3link, .nav-right
 {
-    /* margin-top: 2%; */
-}
+    margin-top: 2%;
+} */
 
 .content-top
 {
@@ -121,7 +121,7 @@ ul.nav-right
 
 }
 
-.subtitle > span
+.border-width
 {
     display: inline-block;
     height: 2px;
@@ -178,10 +178,37 @@ p > span {font-size: 1.5em}
 }
 
 /* .border2 */
-{
+/* {
     display: inline-block;
-    /* height: 10vh; */
-    /* margin: 5vh 12vh 0 0; */
+    height: 10vh;
+    margin: 5vh 12vh 0 0;
     border: 1px solid #fff;
     z-index: 2;
+} */
+
+.content
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #0B1D26;
+}
+
+.content__section
+{
+    display: flex;
+    /* flex-direction: row; */
+    justify-content: space-evenly;
+    align-items: space-between;
+    margin: 15vh 0;
+}
+
+.content__colL
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 40vh;
+    margin-right: 15vh;
 }
