--- a/Moje-Cwiczenia/figma/19.04.21/style.css
+++ b/Moje-Cwiczenia/figma/19.04.21/style.css
@@ -216,8 +216,8 @@ p > span {font-size: 1.5em}
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 40vh;
-    margin-right: 15vh;
+    width: 50vh;
+    margin-right: 10vh;
 }
 
 .content--row2
@@ -231,7 +231,7 @@ p > span {font-size: 1.5em}
     line-height: 2.5vh;
 }
 
-.content--row4 > p
+.content--row4 > a
 {
     color: #FBD784 !important;
     margin-top: 3vh;
